--- a/professional/GCE.html
+++ b/professional/GCE.html
@@ -42,24 +42,46 @@
         </h1> 
         <hr>
         <h6>
-            Issuer: Google for Education 
+            Issuer: <a href="https://edu.google.com/intl/en/teacher-center/certifications/?modal_active=none">Google for Education</a> 
         </h6>
     
         <!-- <div class="container">
             <div class="row">
             <div class="col-md">
                 <button style="text-align: center;" class="btn btn-block accordion_butt" type="button" data-toggle="collapse" 
-                data-target="#collapseExample_C" aria-expanded="false" aria-controls="collapseExample">
-                    Click here to read these certifications
+                data-target="#collapseExample_A" aria-expanded="false" aria-controls="collapseExample">
+                    Click here to read these certifications (Level 1)
                 </button>
             </div>
             </div>
             <div class="row">
             <div class="col-md">
-                <div class="collapse" id="collapseExample_C">
+                <div class="collapse" id="collapseExample_A">
                 <div class="card card-body accordion_cont">
                     <div>
-                    <embed src="../pdf/GCE - combined.pdf" width="100%" height="500">
+                    <embed src="../professional/image/GCE1.png" width="70%" height="500">
+                    </div>      
+                </div>
+                </div>
+            </div>      
+            </div>
+        </div>
+        <p></p>
+        <div class="container">
+            <div class="row">
+            <div class="col-md">
+                <button style="text-align: center;" class="btn btn-block accordion_butt" type="button" data-toggle="collapse" 
+                data-target="#collapseExample_B" aria-expanded="false" aria-controls="collapseExample">
+                    Click here to read these certifications (Level 2)
+                </button>
+            </div>
+            </div>
+            <div class="row">
+            <div class="col-md">
+                <div class="collapse" id="collapseExample_B">
+                <div class="card card-body accordion_cont">
+                    <div>
+                    <embed src="../professional/image/GCE2.png" width="70%" height="500">
                     </div>      
                 </div>
                 </div>
@@ -68,28 +90,65 @@
         </div> -->
 
         <p>
-            As more and more classes have been moved to the online mode, educators should be creative in utilizing online tools in teaching, grading, and learning processes. The certification process of becoming a Google Certified Educator provides a great platform to foster innovation in integrating online tools in teaching. There are many google tools can be incorporated in remote classrooms to enhance the teaching quality and promote engagement. For example: 
-            <ul>
-                <li>Google Classroom can be used to store assignments and class materials. It also has features to allow educators to post annoucements where students can respond to them. </li>
-                <li>Google Earth can be used to measure the area or length of a specific landmark.</li>
-                <li>Google Forms can be used to set interactive quizzes where they can be marked automatically. The forms can also be used to survey on people's opinions on different subjects.</li>
-                <li>Google Sites can be used to record everything in one place such as class syallabus, assignment deadlines, revision materials etc.</li>
-            </ul>     
+            As more and more classes have been moved to the online mode due to the interruption of COVID-19, educators should be creative in utilizing online tools in teaching, grading, and learning processes. The certification process of becoming a Google Certified Educator provides a great platform to foster innovation in integrating online tools in teaching. There are many google tools that can be incorporated in remote classrooms to enhance teaching quality and promote engagement. For example: 
+
+            <table class="TFtable">
+                <colgroup>
+                    <col span="1" style="width: 15%;">
+                    <col span="1" style="width: 85%;">
+                    </colgroup>
+                <tbody>
+                <tr>
+                    <th>Google tools</th>
+                    <th>Integration in online classrooms</th>
+                </tr>
+                <tr>
+                    <td>Google Classroom</td>
+                    <td>Store assignments and class materials as well as allow educators to post annoucements where students can respond to</td>
+                </tr>
+                <tr>
+                    <td>Google Earth</td>
+                    <td>Measure the area or length of a specific landmark</td>
+                </tr>
+                <tr>
+                    <td>Google Maps</td>
+                    <td>Create a map of different countries visited and calculate the total distance travelled</td>
+                </tr>
+                <tr>
+                    <td>Google Forms</td>
+                    <td>Set interactive quizzes where they can be marked automatically and to survey on people's opinions on different subjects</td>
+                </tr>
+                <tr>
+                    <td>Google Sites</td>
+                    <td>Record every relevant materials in one place such as the class syallabus, assignment deadlines, revision materials etc.</td>
+                </tr>
+                <tr>
+                    <td>Google Calendar</td>
+                    <td>Assign due dates and set up appointment slots for a specific conference</td>
+                </tr>
+                </tbody>
+            </table>
         </p>
         
         <p>
-            Those who are interested in becoming a Google Certified Educator can find further information on the website of Google for Education. The <a href="https://edu.google.com/teacher-center/certifications/educator-level1/?modal_active=none">Level 1 Certification</a> expects test takers to demonstrate fundamental knowledge in integrating Google tools for education purposes, while the <a href="https://edu.google.com/teacher-center/certifications/educator-level2/?modal_active=none">Level 2 Certification</a> would test on advanced technology integration skills in utilizing Google tools for education purposes.  
+            Since I am passionate about exploring new ways of teaching, I went through the certification process. Typically, educators starts from the <a href="https://edu.google.com/teacher-center/certifications/educator-level1/?modal_active=none">Level 1 Certification</a>, which allows test takers to demonstrate fundamental knowledge in integrating Google tools for education purposes. The exam consists of several multiple choice questions and also a significant portion of practical questions based on various real-life scenarios.
         </p>
 
         <div class="image">
             <img src="../professional/image/GCE1.png" width="70%">
         </div>
 
-        <p class="enter"></p>
+        <p>
+            As I believe online technologies are essential in the new remote learning environment, I would also like to further foster my innovation and demonstrate my compentency in utilizing online technologies in my classrooms. Therefore, I also registered for the <a href="https://edu.google.com/teacher-center/certifications/educator-level2/?modal_active=none">Level 2 Certification</a>, which allows test takers to validate advanced technology integration skills in teaching and learning. The exam format was almost the same as the Level 1 exam, but the Level 2 exam covers a wider range of google tools with more advanced features.  
+        </p>
 
         <div class="image">
             <img src="../professional/image/GCE2.png" width="70%">
         </div>
+
+        <p>
+            Although the certification is mainly focused on education, the skillset acquired in this certification process is also transferrable to other areas such as event management. The pandemic has also forced many activities to be conducted online, so using online tools to organize events will also become an essential skill. In addition, although the certification covers only the google products, the same skillset can also be transferrable when using other tech tools in a creative manner. Becoming a Google Certified Educator is also an indicator which shows the educator is willing to commit to professional development and lifelong learning.
+        </p>
 
         <p class="enter"></p>
 
