--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
                             <li><i class="flag flag-icon flag-icon-gb"></i> English</li>  
                             <li><i class="flag flag-icon flag-icon-cn"></i> Chinese</li>
                             <li><i class="flag flag-icon flag-icon-my"></i> Malay</li>
+                            <li><i class="flag flag-icon flag-icon-fr"></i> French (learning)</li>
                         </ul>    
                     </div>
                 
@@ -169,7 +170,8 @@
                                 <ul class="nobull">
                                     <li><i class="flag-icon flag-icon-gb"></i> English  
                                     <i class="flag-icon flag-icon-cn"></i> Chinese
-                                    <i class="flag-icon flag-icon-my"></i> Malay</li>
+                                    <i class="flag-icon flag-icon-my"></i> Malay
+                                    <i class="flag flag-icon flag-icon-fr"></i> French (learning)</li>
                                 </ul>    
                             </div>
                         
