--- a/professional/GPS989.html
+++ b/professional/GPS989.html
@@ -95,7 +95,7 @@
             So how can we design for disability in teaching environments? Some examples include practicing a slower speaking pace, repeating key notes, finding a balance between written and oral instructions, and many more. This will not just help students with learning disabilities. Even high-performance students would appreciate educators to deliver lessons that are more inclusive too, wouldn't they? 
         </p>
     
-        <h3>
+        <h3 id="microteaching">
             Microteaching
         </h3>
         <hr>
