--- a/education/engineering.html
+++ b/education/engineering.html
@@ -39,20 +39,21 @@
                 <b>Is Engineering Right for Me?</b>
             </h1> 
             <hr>
-            <p id = "small_caption">
-                <strong>This page is specifically designed for those who are considering to pursue / currently pursuing an engineering degree.
+            <p>
+                <strong>This page is specifically designed for those who are considering to pursue an engineering degree.
             </strong></p>
             <div class="alert alert-success" role="alert", style="margin: 15px 15px 15px 15px;">
-                I am particularly interested in reaching out to the below groups and discuss about engineering studies:
+                I am particularly interested in reaching out to the below groups and provide relevant advice about pursuing engineering studies:
                 <ul style="margin: 5px 10px;">    
                     <li><a href="https://www.canada.ca/en/services/culture/canadian-identity-society/indigenous-peoples-cultures.html">
                         indigenous people</a></li>
                     <li><a href="https://www.un.org/development/desa/dpad/least-developed-country-category.html#:~:text=About%20the%20LDC%20category,low%20levels%20of%20human%20assets.">
                         least developed countries</a>' citizens defined by the United Nations</li>
+                    <li>women</li>
                     <li>single-parent or low-income family</li>
                     <li>refugees</li>
                 </ul>
-                If you identify yourself as any of these groups and currently considering to pursue engineering studies, please feel free to contact me if you need a consultation, which can include, but is not limited to, engineering program structure, admission requirements, student life, career prospect, etc.   
+                If you identify yourself as any of these groups and currently considering to pursue engineering studies, please feel free to contact me at <a href="mailto:hermanhgy@gmail.com">hermanhgy@gmail.com</a> if you need a consultation, which can include, but is not limited to, engineering program structure, admission requirements, student life, career prospect, etc.   
             </div>
 
             <h3>
@@ -68,7 +69,7 @@
                     <tr>
                         <th>Program</th>
                         <th>Brief Description</th>
-                        <th>Examples of Application</th>
+                        <th>Examples of Applications</th>
                     </tr>
                     <tr>
                         <td>Civil Enginnering</td>
@@ -88,7 +89,7 @@
                     <tr>
                         <td>Mechanical Enginnering</td>
                         <td>Design and optimization of mechanical systems and its associated energy systems</td>
-                        <td>Design of air conditioning systems and automobile</td>
+                        <td>Design of air conditioning systems and automobile, energy management</td>
                     </tr>
                 </table>
             </p>
@@ -103,7 +104,7 @@
                     <li>Strutural Engineering: 
                         a speciality of Civil Engineering with a specialized area in safe and optimum construction</li>
                     <li>Environmental Engineering: 
-                        a speciality of Chemical Engineering with specific focus on promoting a cleaner environment</li> 
+                        a speciality of Chemical Engineering with specific focus on promoting a more sustainable environment</li> 
                 </ul>   
             </p>
             
@@ -121,7 +122,7 @@
                 </ul>
             </p>
             <p>
-                The programs in these three groups may be offered as a specialization option for students in the four main programs listed in the table (Civil, Mechanical, Electrical, Chemical), while some schools may separate them into different programs, so be sure to check with your school. You can see that Engineering is such a diverse program that involves many disciplines, even in other non-engineering fields! If you are passionate to lead the world in a better direction, pursuing an engineering degree is probably a good start &#128512;  
+                The programs in these three groups may be offered as a specialization option for students in the four main programs listed in the table (Civil, Mechanical, Electrical, Chemical), while some schools may separate them into different programs, so be sure to check with your school. You can see that Engineering is such a diverse field that involves many disciplines, even in other non-engineering fields! If you are passionate to lead the world in a better direction, pursuing an engineering degree is probably a good start &#128512;  
             </p> 
 
             <h3>
@@ -129,7 +130,7 @@
             </h3> 
             <hr>
             <p>
-                Whichever program you choose, you can expect to study a series of general engineering subjects in your first year. This means every engineering student, regardless of their program of choice, would take the same courses in the first year. These courses include but are not limited to:
+                Whichever program you choose, you can expect to study a series of general engineering subjects in your first year. This means every engineering student, regardless of their programs of choice, will most likely take the same courses in the first year. These courses include but are not limited to:
             </p>    
 
             <div class="container" style="text-align: left;">
@@ -273,7 +274,7 @@
             </p>
             <h6>Intention:</h6>
             <p style="margin-top: 5px;">
-                Many people study Engineering because they think there will be a bright future such as earning a big salary. If this is your main motivation, what would you do if engineering is relatively less blooming than you expected in the future (e.g. unexpected global oil price drop)? Are you willing to drop your engineering career and pursue another area from scratch? It is reasonable to have "big earning" as a motivation, but I suggest not to have this as your sole reason of pursuing any degree. Some questions you could reflect on are: 
+                Many people study Engineering because they think there will be a bright future such as earning a big salary. I personally disagree with this motivation. Spend a moment to reflect, what would you do if engineering is less blooming than you expected in the future (e.g. unexpected global oil price drop)? Are you willing to drop your engineering career and pursue another area from scratch? It is reasonable to have "big earning" as a motivation, but I suggest not to have this as your sole reason of pursuing any degree. Some questions you could reflect on are: 
                 <ul style="margin-left: 15px;">
                     <li>What is your main driver to pursue engineering studies?</li>
                     <li>How can that driver motivate you even when you are facing critical challenges in your engineering studies or career?</li>
