--- a/education/layout.html
+++ b/education/layout.html
@@ -36,7 +36,7 @@
             <div class="aside-content">
                 <b>Content:</b>
                 <ul class="nobull">
-                    <li><a class="whitelink" href="experimental.html"> Experimental Fluid Mechanics </a></li>
+                    <!-- <li><a class="whitelink" href="experimental.html"> Experimental Fluid Mechanics </a></li> -->
                     <li><a class="whitelink" href="MSc.html"> Master's Degree in Mech. Eng.</a></li>
                     <li><a class="whitelink" href="BSc.html"> Bachelor's Degree in Mech. Eng. </a></li>  
                     <li><a class="whitelink" href="award.html"> Academic Awards </a></li>    
@@ -61,7 +61,7 @@
                 <div class="collapse" id="navbarToggleExternalContent">
                     <div class="aside-content">
                         <ul class="nobull">
-                            <li><a class="whitelink" href="experimental.html"> Experimental Fluid Mechanics </a></li>
+                            <!-- <li><a class="whitelink" href="experimental.html"> Experimental Fluid Mechanics </a></li> -->
                             <li><a class="whitelink" href="MSc.html"> Master's Degree in Mech. Eng.</a></li>
                             <li><a class="whitelink" href="BSc.html"> Bachelor's Degree in Mech. Eng. </a></li>  
                             <li><a class="whitelink" href="award.html"> Academic Awards </a></li>    
