--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         <a href="https://www.couchsurfing.com/people/herman-heng-1" data-toggle="tooltip" data-placement="top" title="Couchsurfing"><img src="icon/CS.png" class="social-media-home"></a>       
                     </div>
                     <div>
-                        <img src="icon/GCE_Badges_02.png" width="100%">
+                        <a href="../professional/GCE.html"><img src="icon/GCE_Badges_02.png" width="100%"></a>
                     </div>
                 </div>
             </div>
@@ -201,7 +201,7 @@
             </h1>
             <hr>
             <p>
-                Hi there, welcome to this page. I am Cloud, a youth who is inspired to make the world a better place to live. Like clouds in the sky, I never want myself to be stagnant! In this fast-changing world, I am committed to continuous learning in different areas to equip myself with new knowledge so that I can keep challenging myself to create more innovative solutions to my community. I embrace travelling to different corners of the world, connecting with various people internationally, and promoting diversity by integrating with different cultures. 
+                Hi there, welcome to this page. I am Cloud, a youth who is inspired to make the world a better place to live. Like clouds in the sky, I will not be stagnant! In this fast-changing world, I am committed to continuous development in different areas to equip myself with new knowledge so that I can keep challenging myself to create innovative solutions to solve problems in my community. I embrace travelling to different corners of the world, connecting with various people internationally, and promoting diversity by integrating myself with different cultures. 
             </p>
 
             <h3>
@@ -210,7 +210,7 @@
             <hr>
             
             <div class="alert alert-info" role="alert", style="margin: 15px 15px 15px 15px;">
-                I strive to utilize my engineering expertise to promote sustainable development globally. It is my responsibility, as part of the Earth's resources users, to contribute towards solutions of shaping a low-carbon environment and address climate change challenges. In my community, I aim to establish an inclusive environment where people can be integrated and empowered regardless of their demographic backgrounds. I aspire to grow myself as a dedicated mentor, educator, and motivator, guiding more young people to discover their values and strengths, and I intend to create platforms that utlitize their talents. Teaching is my passion, and I aim to develop more innovative strategies to cultivate students' interest in engineering learning. To accomplish my mission, I am committed to continuous professional development while welcoming feedback. 
+                I strive to utilize my engineering expertise to promote sustainable development globally. It is my responsibility, as part of the consumers of Earth's resources, to contribute towards the solutions of shaping a low-carbon environment and address the issue of climate change. In my community, I aim to establish an inclusive environment where people can be integrated and empowered regardless of their demographic backgrounds. I aspire to grow myself as a dedicated mentor, educator, and motivator, guiding more young people to discover their values and strengths, and I intend to create platforms that utlitize their talents and help them achieve their full potential. Teaching is my passion, and I aim to develop more innovative strategies to cultivate students' interest in engineering learning. To accomplish my mission, I am committed to continuous professional development while welcoming feedback. 
             </div>
 
             <p id="explore">Explore what I have been doing to achieve my mission statement by clicking different subject areas below:</p>
@@ -266,7 +266,7 @@
             </h3>
             <hr>
             <p>
-                It is my aspiration to connect with more people across the world. I constantly welcome feedback from different people of various backgrounds. I embrace any idea exchange on how to make the world a better place to live. If you think we are sharing the same values, I would be more than happy to connect with you. Please feel free to contact me via any social media at your wish at the left pane (desktop view) or the top pane (mobile view) of this page. I look forward to connecting with you &#128512; 
+                It is my aspiration to connect with more people across the world. I value social mobilization and welcome feedback from people of various backgrounds. I embrace exchanging ideas on how to make the world a better place to live. If you think we are sharing the same values, it will be my pleasure to connect with you. If you are considering pursuing an engineering degree, please refer to <a href="../education/engineering.html">this page</a>. I can be reached at <a href="mailto:hermanhgy@gmail.com">hermanhgy@gmail.com</a> or via any social media at your wish published on this home page. I look forward to connecting with you &#128512; 
             </p>  
             
             <!-- <p id = "small_caption"><i>Icons on this page was made by 
