--- a/education/MSc.html
+++ b/education/MSc.html
@@ -68,7 +68,10 @@
                 University of Saskatchewan (U of S) is a part of the <a href="http://www.u15.ca/">U15 group in Canada</a> who is committed to research excellence. My main focus of this degree is research on experimental fluid mechanics, and the research was complemented with knowledge gained from several graduate courses in fluid mechanics and thermal sciences.  
             </p>
             <p>
-                U of S is located in Saskatoon, the most populated city in the province of Saskatchewan, which is part of the Canadian prairies. Saskatoon is on the Treaty 6 Territory of Canada and the Homeland of the M&#233;tis. It is common for residents living in this city to pay respect to the First Nations and M&#233;tis ancestors of this place.
+                U of S is located in Saskatoon, the most populated city in the province of Saskatchewan, which is part of the Canadian prairies. Saskatoon is on the Treaty 6 Territory of Canada and the Homeland of the M&#233;tis. It is common for residents living in this city to acknowledge the First Nations and M&#233;tis ancestors of this place. The land acknowledge used by the U of S is as follows:
+            </p>
+            <p>
+                <i>"As we gather here today, we acknowledge we are on Treaty 6 Territory and the Homeland of the Métis. We pay our respect to the First Nations and Métis ancestors of this place and reaffirm our relationship with one another."</i>
             </p>
             <div class="container">
                 <div class="row">
@@ -96,7 +99,8 @@
                 <a href="https://harvest.usask.ca/handle/10388/12492" target="blank">Experimental investigation on the flow around surface-mounted finite-height square prisms</a> 
             </p>
             <p>
-                My major work throughout my master's degree is research of experimental fluid mechanics, specifically on bluff-body aerodynamics. This research investigated the effect of wind directions, structural dimensions, and incoming wind turbulence intensity on the aerodynamics properties of square prisms. More information of my M.Sc. experimental research can be found <a href="../education/experimental.html">here</a>. 
+                My major work throughout my master's degree is research of experimental fluid mechanics, specifically on bluff-body aerodynamics. This research investigated the effect of wind directions, structural dimensions, and incoming wind turbulence intensity on the aerodynamics properties of square prisms. 
+                <!-- More information of my M.Sc. experimental research can be found <a href="../education/experimental.html">here</a>.  -->
             </p>
             <p>
                 This thesis was supervised by <a href="https://davidrobertsumner.wordpress.com/">Prof. David Sumner</a>, and its associated work was greatly assisted by Shawn Reinink and Hayden Reitenbach.
@@ -320,7 +324,7 @@
             </p>
 
             <p>
-                The research predicts the cumulative wind turbine blade waste until 2050 in Canada due to the rapid development of wind power. While the wind power is a clean energy technology, it introduces waste especially during the decommissioning and waste management process. A long-term forecast on the waste due to the wind power sector is needed for each provincial government to plan for their renewable energy policies and waste management programs.  
+                The research predicted the cumulative wind turbine blade waste until 2050 in Canada due to the rapid development of wind power and assessed their waste management strategies. While the wind power is a clean energy technology, it introduces waste especially during the decommissioning and waste management process. A long-term forecast on the waste due to the wind power sector is needed for each provincial government to plan for their renewable energy policies and waste management programs.  
             </p>
 
             <h3>
@@ -328,7 +332,7 @@
             </h3>
             <hr>
             <p>
-                Personally, I think Saskatoon offers a perfect study environment. Being relatively less populated compared to other major cities in Canada, the city offers a few benefits, from shorter transit time between home and the campus to having more sense of community. Of course, the views in the prairie during the summer are also stunning, if you are someone who sometimes values a quiet space &#128521;
+                Personally, I think Saskatoon offers a perfect study environment. Being relatively less populated compared to other major cities in Canada, the city offers some benefits, from shorter transit time between home and the campus to having more sense of community. Of course, the views in the prairie during the summer are also stunning, if you are someone who sometimes values a quiet space &#128521;
             </p>
             <p>
                 Living in the prairie has helped me learn more about the First Nations, which is part of the <a href="https://teaching.usask.ca/indigenoussk/import/indigenous_peoplesof_saskatchewan.php">indigenous people</a> in Canada. Besides visiting their forest on their Treaty Day, I also had the opportunity to introduce Engineering studies to some First Nations high school students. This city is small but vibrant with many young students, including international students coming from about 130 countries.  
