--- a/education/BSc.html
+++ b/education/BSc.html
@@ -81,7 +81,7 @@
                 Design of Automatic Preventive Maintenance Software for Car Users 
             </p>
             <p>
-                My final year project (with a thesis) designed an automative preventive maintenance system by using Visual Studio programming. This project was awarded as the most innovative project at the annual project competition of the department.  
+                My final year project (with an honour thesis) designed an automative preventive maintenance system by using Visual Studio programming. This project was awarded as the most innovative project at the annual project competition of the department.  
             </p>
             <div class="container">
                 <div class="row">
@@ -111,7 +111,7 @@
                 <div class="col-md">
                     <button class="btn btn-block accordion_butt2" type="button" data-toggle="collapse" 
                     data-target="#collapseExample0" aria-expanded="false" aria-controls="collapseExample">
-                        <b>10 Credits</b>: Project and Internship
+                        <b>10 Credits</b>: Thesis and Internship
                     </button>
                 </div>
                 </div>
@@ -120,7 +120,7 @@
                 <div class="collapse" id="collapseExample0">
                     <div class="card card-body">
                         <ul>
-                            <li><span class="a">Final Year Project</span>6 credits in 2 terms </li>
+                            <li><span class="a">Final Year Project (Thesis)</span>6 credits in 2 terms </li>
                             <li><span class="a">Industrial Training</span>4 credits </li>
                         </ul>          
                     </div>
