--- a/education/engineering.html
+++ b/education/engineering.html
@@ -46,14 +46,14 @@
                 I am particularly interested in reaching out to the below groups and provide relevant advice about pursuing engineering studies:
                 <ul style="margin: 5px 10px;">    
                     <li><a href="https://www.canada.ca/en/services/culture/canadian-identity-society/indigenous-peoples-cultures.html">
-                        indigenous people</a></li>
+                        indigenous people</a> living in Canada</li> 
                     <li><a href="https://www.un.org/development/desa/dpad/least-developed-country-category.html#:~:text=About%20the%20LDC%20category,low%20levels%20of%20human%20assets.">
                         least developed countries</a>' citizens defined by the United Nations</li>
                     <li>women</li>
                     <li>single-parent or low-income family</li>
                     <li>refugees</li>
                 </ul>
-                If you identify yourself as any of these groups and currently considering to pursue engineering studies, please feel free to contact me at <a href="mailto:hermanhgy@gmail.com">hermanhgy@gmail.com</a> if you need a consultation, which can include, but is not limited to, engineering program structure, admission requirements, student life, career prospect, etc.   
+                I was part of the vulnerable groups when I considered for an engineering degree, so I intend to help more people who had similar situations as mine in this process by providing relevant advice. If you identify yourself as any of these groups and currently considering pursuing engineering studies, please feel free to contact me at <a href="mailto:hermanhgy@gmail.com">hermanhgy@gmail.com</a> if you need a chat, which can include, but is not limited to, engineering program structure, school selection, admission requirements, student life, career prospect, social implications of engineering, etc.   
             </div>
 
             <h3>
@@ -63,7 +63,7 @@
             
             <p>
                 There are many different engineering programs being offered worldwide, 
-                with below options are the most common programs available in majority of the engineering institutions:
+                with below options are the most common programs available in most of the engineering institutions:
 
                 <table class="TFtable" style="font-size: larger;">
                     <tr>
