--- a/education/engineering.html
+++ b/education/engineering.html
@@ -253,7 +253,7 @@
                 Choosing a university program is an important life decision. Even when one has decided to pursue an engineering degree, there is also the next step of determining which engineering program to pursue. Moreover, within an engineering program, there are still many areas in which you can choose to specialize. These decisions can be tough, but doubts and uncertainties can often be reduced with proper consultation and detailed self-examination. Below are some factors that could be your reference in deciding if pursuing an engineering degree is a suitable option for you.  
             </p>
 
-            <h6>Interests:</h6>
+            <h6><u>Interests:</u></h6>
             <p style="margin-top: 5px;">
                 Every path that you choose in your life will likely come with challenges. However, challenges can often be faced in a positive attitude if you are motivated and driven by your passion and interests. Engineers solve the real daily life challenges faced by today's society, so Engineering studies often involve a lot of design problems which require creative thinking and complex mathematical analysis. Some questions you could reflect on are:
                 <ul style="margin-left: 15px;">
@@ -262,23 +262,33 @@
                     <li>Are you passionate in finding new innovative solutions to existing problems?</li>
                 </ul>
             </p>
+            <p>
+                If you answered "yes", then you may find it enjoyable to pursue an engineering degree. If you are studying engineering, there may be no need for you to become a master of mathematics (note that degree in engineering and degree in mathematics are different). However, you need to have a certain level of passion in math because you will be dealing with numbers a lot. Often, many engineering courses will help you discover how things work with different principles involving formulae and numbers. It is also common for engineering students to participate in projects in their final year that focus on solving some existing industrial problems. It is important for engineers to have passion in solving problems and finding solutions. 
+            </p>
             
-            <h6>Character:</h6>
+            <h6><u>Character:</u></h6>
             <p style="margin-top: 5px;">
                 As discussed above, engineering studies may involve some interdisciplinary studies. This means you would likely learn a few subject areas outside your major regardless of your program of choice. In engineering work environments, it is common to use team work to communicate with other engineers of different disciplines. Having more knowledge in other engineering disciplines could allow you to communicate more effectively in a team. Some questions you could reflect on are:
                 <ul style="margin-left: 15px;">
                     <li>Are you someone who embraces learning something outside your major?</li>                    
-                    <li>Do you prefer to work in a setting that involves a large component of team work? Or do you prefer to work behind the scenes?</li>
+                    <li>Do you prefer to work in a setting that involves a large component of team work?</li>
                     <li>Do you like to travel and meet people (such as clients, contractors, suppliers)?</li>
                 </ul>
             </p>
-            <h6>Intention:</h6>
+            <p>
+                If you answered "yes", then an engineering program may be a good fit for you. Engineering students need to have passion to learn knowledge from multiples disciplines and communicate with a multidisplinary audience. Team work is also a strong component in engineering work. Many engineering regulatory bodies expect their applicants to have communication skills and abilities to work in a team. Engineering work may also involves travelling to sites, plants or overseas locations, depending on the nature of work and your organizations. When I worked in an oil and energy industry, I got the opportunity to travel to an offshore plant almost every month. 
+            </p>
+
+            <h6><u>Intention:</u></h6>
             <p style="margin-top: 5px;">
-                Many people study Engineering because they think there will be a bright future such as earning a big salary. I personally disagree with this motivation. Spend a moment to reflect, what would you do if engineering is less blooming than you expected in the future (e.g. unexpected global oil price drop)? Are you willing to drop your engineering career and pursue another area from scratch? It is reasonable to have "big earning" as a motivation, but I suggest not to have this as your sole reason of pursuing any degree. Some questions you could reflect on are: 
+                Many people study Engineering because they think there will be a bright future such as earning a big salary. I personally disagree with this motivation. Spend a moment to reflect, what would you do if engineering is less blooming than you expected in the future (e.g. unexpected global oil price drop)? Would you still be passionate in your engineering career or would you prefer to pursue another area from scratch? Some questions you could reflect on are: 
                 <ul style="margin-left: 15px;">
                     <li>What is your main driver to pursue engineering studies?</li>
                     <li>How can that driver motivate you even when you are facing critical challenges in your engineering studies or career?</li>
                 </ul>
+            </p>
+            <p>
+                Understanding your main driver is important because that reason will keep the level of your motivation if you face any unexpected challenges and obstacles in your future path. It is reasonable to have "big earning" as a motivation, but I suggest not to have this as your sole reason of pursuing any degree. 
             </p>
             <p class="enter"></p>
 
