--- a/education/engineering.html
+++ b/education/engineering.html
@@ -43,7 +43,7 @@
                 <strong>This page is specifically designed for those who are considering to pursue an engineering degree.
             </strong></p>
             <div class="alert alert-success" role="alert", style="margin: 15px 15px 15px 15px;">
-                I am particularly interested in reaching out to the below groups and provide relevant advice about pursuing engineering studies:
+                I am particularly interested in reaching out to the below groups and having discussion about pursuing engineering studies:
                 <ul style="margin: 5px 10px;">    
                     <li><a href="https://www.canada.ca/en/services/culture/canadian-identity-society/indigenous-peoples-cultures.html">
                         indigenous people</a> living in Canada</li> 
@@ -53,7 +53,7 @@
                     <li>single-parent or low-income family</li>
                     <li>refugees</li>
                 </ul>
-                I was part of the vulnerable groups when I considered for an engineering degree, so I intend to help more people who had similar situations as mine in this process by providing relevant advice. If you identify yourself as any of these groups and currently considering pursuing engineering studies, please feel free to contact me at <a href="mailto:hermanhgy@gmail.com">hermanhgy@gmail.com</a> if you need a chat, which can include, but is not limited to, engineering program structure, school selection, admission requirements, student life, career prospect, social implications of engineering, etc.   
+                I was part of the vulnerable groups when I considered for an engineering degree, so I intend to help more people who have similar situations as mine by providing relevant advice or recommendations. If you identify yourself as any of these groups and currently considering pursuing engineering studies, please feel free to contact me at <a href="mailto:hermanhgy@gmail.com">hermanhgy@gmail.com</a> if you wish to arrange for a chat, which can include, but is not limited to, engineering program structure, school selection, admission requirements, student life, career prospect, social implications of engineering, etc.   
             </div>
 
             <h3>
@@ -253,7 +253,7 @@
                 Choosing a university program is an important life decision. Even when one has decided to pursue an engineering degree, there is also the next step of determining which engineering program to pursue. Moreover, within an engineering program, there are still many areas in which you can choose to specialize. These decisions can be tough, but doubts and uncertainties can often be reduced with proper consultation and detailed self-examination. Below are some factors that could be your reference in deciding if pursuing an engineering degree is a suitable option for you.  
             </p>
 
-            <h6><u>Interests:</u></h6>
+            <h5><u>Interest:</u></h5>
             <p style="margin-top: 5px;">
                 Every path that you choose in your life will likely come with challenges. However, challenges can often be faced in a positive attitude if you are motivated and driven by your passion and interests. Engineers solve the real daily life challenges faced by today's society, so Engineering studies often involve a lot of design problems which require creative thinking and complex mathematical analysis. Some questions you could reflect on are:
                 <ul style="margin-left: 15px;">
@@ -266,7 +266,7 @@
                 If you answered "yes", then you may find it enjoyable to pursue an engineering degree. If you are studying engineering, there may be no need for you to become a master of mathematics (note that degree in engineering and degree in mathematics are different). However, you need to have a certain level of passion in math because you will be dealing with numbers a lot. Often, many engineering courses will help you discover how things work with different principles involving formulae and numbers. It is also common for engineering students to participate in projects in their final year that focus on solving some existing industrial problems. It is important for engineers to have passion in solving problems and finding solutions. 
             </p>
             
-            <h6><u>Character:</u></h6>
+            <h5><u>Character:</u></h5>
             <p style="margin-top: 5px;">
                 As discussed above, engineering studies may involve some interdisciplinary studies. This means you would likely learn a few subject areas outside your major regardless of your program of choice. In engineering work environments, it is common to use team work to communicate with other engineers of different disciplines. Having more knowledge in other engineering disciplines could allow you to communicate more effectively in a team. Some questions you could reflect on are:
                 <ul style="margin-left: 15px;">
@@ -279,7 +279,7 @@
                 If you answered "yes", then an engineering program may be a good fit for you. Engineering students need to have passion to learn knowledge from multiples disciplines and communicate with a multidisplinary audience. Team work is also a strong component in engineering work. Many engineering regulatory bodies expect their applicants to have communication skills and abilities to work in a team. Engineering work may also involves travelling to sites, plants or overseas locations, depending on the nature of work and your organizations. When I worked in an oil and energy industry, I got the opportunity to travel to an offshore plant almost every month. 
             </p>
 
-            <h6><u>Intention:</u></h6>
+            <h5><u>Intention:</u></h5>
             <p style="margin-top: 5px;">
                 Many people study Engineering because they think there will be a bright future such as earning a big salary. I personally disagree with this motivation. Spend a moment to reflect, what would you do if engineering is less blooming than you expected in the future (e.g. unexpected global oil price drop)? Would you still be passionate in your engineering career or would you prefer to pursue another area from scratch? Some questions you could reflect on are: 
                 <ul style="margin-left: 15px;">
