--- a/education/engineering.html
+++ b/education/engineering.html
@@ -43,7 +43,7 @@
                 <strong>This page is specifically designed for those who are considering to pursue an engineering degree.
             </strong></p>
             <div class="alert alert-success" role="alert", style="margin: 15px 15px 15px 15px;">
-                I am particularly interested in reaching out to the below groups and having discussion about pursuing engineering studies:
+                I am particularly interested in reaching out to the below groups and having discussions about pursuing engineering studies:
                 <ul style="margin: 5px 10px;">    
                     <li><a href="https://www.canada.ca/en/services/culture/canadian-identity-society/indigenous-peoples-cultures.html">
                         indigenous people</a> living in Canada</li> 
